# python-git-ai

./: .gitignore  Dockerfile  README.md  README.pt-BR.md  docker-compose.yml  pyproject.toml
hooks/: commit-msg
src/git_ai/: __init__.py  __version__.py  cli.py  config.py
src/git_ai/agents/: __init__.py  prompts.py
src/git_ai/enums/: __init__.py  commit_type.py
src/git_ai/services/: __init__.py  ai_service.py  anthropic_service.py  claude_code_service.py  factory.py  git_service.py  openai_service.py
src/git_ai/support/: __init__.py  commit_template.py
tests/: conftest.py
tests/feature/: test_changelog_command.py  test_commit_command.py  test_setup_command.py
tests/unit/: test_ai_service.py  test_claude_code_service.py  test_commit_template.py  test_commit_type.py  test_config.py  test_git_service.py  test_prompts.py
